fix(components): form controller alignments
- enable more consistent base form control behaviors

--- a/packages/components/src/switch/element.css
+++ b/packages/components/src/switch/element.css
@@ -45,7 +45,7 @@
 }
 
 :host(:--checked) {
-  --background: var(--bp-status-success-background-200);
+  --background: var(--bp-status-success-background-200) !important;
 }
 
 :host(:--checked) [input]::after {
